--- a/app/views/create-event/title.html
+++ b/app/views/create-event/title.html
@@ -355,7 +355,7 @@
 				  Summarise who this event is for, including any eligibility criteria.
 				  {% if emptyTargetAudienceText %}
 					  <span class="error-message">
-						  Ener the summary
+						  Enter the summary
 					  </span>
 				  {% endif %}
 			  </label>
