--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -82,7 +82,7 @@
 							  <label for="radio-market-2">No, this is relevant to all markets</label>
 						  </div>
 						  <div class="multiple-choice" style="margin-bottom:10px" data-target="market-section">
-							  <input id="radio-market-1" type="radio" name="radio-markets" value="yes">
+							  <input id="radio-market-1" type="radio" name="radio-markets" value="yes" aria-controls="market-section">
 							  <label for="radio-market-1">Yes</label>
 						  </div>
 					  </div>
@@ -95,17 +95,14 @@
 					  <label class="form-label-bold" for="event-description" style="margin-bottom:6px;">
 						  Markets
 					  </label>
-					  <div style="width:70%">
-						  <input type="text" class="form-control"  style="width:80%; margin-bottom:10px;"
-								 id="market-box" name="market-box" value="{{ data['market-box'] }}">
-
-						  <input type="text" class="form-control"  style="width:80%; margin-bottom:10px;"
-								 id="market-box-2" name="market-box-2" value="{{ data['market-box-2'] }}">
-
-						  <input type="text" class="form-control"  style="width:80%;"
-								 id="market-box-3" name="market-box-3" value="{{ data['market-box-3'] }}">
-					  </div>
-
+					  <select class="form-control" id="location-select-dropdown">
+						  <option value="" disabled selected>
+							  Choose a location
+						  </option>
+						  {% for location in locations %}
+						      <option value="{{location}}">{{location}}</option>
+						  {% endfor %}
+					  </select>
 				  </div>
 			  </fieldset>
 		  </div>
@@ -458,7 +455,24 @@
 
 {% endblock %}
 
-
-
-
-
+{% block body_end %}
+  <link rel="stylesheet" href="https://unpkg.com/accessible-typeahead@0.4.1/dist/styled.min.css">
+  <style>
+    .typeahead__menu--inline {
+      max-height: none;
+      overflow-x: visible;
+    }
+  </style>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/registers-picker-engine@0.0.2"></script>
+  <script type="text/javascript" src="https://unpkg.com/accessible-typeahead@0.4.1"></script>
+  <script type="text/javascript">
+    var dataFilePath = '/public/data/picker-data-4.json'
+    AccessibleTypeahead.enhanceSelectElement({
+      autoselect: true,
+      selectElement: document.getElementById('location-select-dropdown'),
+      minLength: 2,
+      source: locationPickerSuggestions(dataFilePath)
+    })
+  </script>
+{% endblock %}
