Removed aria-controls

--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -82,7 +82,7 @@
 							  <label for="radio-market-2">No, this is relevant to all markets</label>
 						  </div>
 						  <div class="multiple-choice" style="margin-bottom:10px" data-target="market-section">
-							  <input id="radio-market-1" type="radio" name="radio-markets" value="yes" aria-controls="market-section">
+							  <input id="radio-market-1" type="radio" name="radio-markets" value="yes">
 							  <label for="radio-market-1">Yes</label>
 						  </div>
 					  </div>
